WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31369
Tiny path fixes in Chromium API includes
https://bugs.webkit.org/show_bug.cgi?id=31369
Summary
Tiny path fixes in Chromium API includes
Yaar Schnitman
Reported
2009-11-11 12:45:19 PST
2 files still pointed to downstream directories.
Attachments
path fix
(1.49 KB, patch)
2009-11-11 12:52 PST
,
Yaar Schnitman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yaar Schnitman
Comment 1
2009-11-11 12:52:58 PST
Created
attachment 42992
[details]
path fix
WebKit Commit Bot
Comment 2
2009-11-11 13:10:22 PST
Comment on
attachment 42992
[details]
path fix Clearing flags on attachment: 42992 Committed
r50836
: <
http://trac.webkit.org/changeset/50836
>
WebKit Commit Bot
Comment 3
2009-11-11 13:10:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug