third_party/WebKit/WebKit/chromium/public/linux/WebSandboxSupport.h
@@ -32,8 +32,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef WebSandboxSupport_h
 #define WebSandboxSupport_h
 
-#include "webkit/api/public/WebCommon.h"
-#include "webkit/api/public/WebString.h"
+#include "../WebCommon.h"
+#include "../WebString.h"
 
 namespace WebKit {
 
