third_party/WebKit/WebKit/chromium/src/WebBindings.cpp
@@ -34,8 +34,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "npruntime_impl.h"
 #include "npruntime_priv.h"
-#include "webkit/api/public/WebDragData.h"
-#include "webkit/api/public/WebRange.h"
+
+#include "WebDragData.h"
+#include "WebRange.h"
 
 #if USE(V8)
 #include "ChromiumDataObject.h"
